2022-09-14T02:21:22Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049710881
* notice: last 14d: unq all: 8 28
* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 29 65
* notice: next accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -5 -11 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-08-30] / [2022-08-31 2022-09-13]

2022-09-13T16:29:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046766358
* notice: last 14d: unq all: 13 64
* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 33 106
* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 29 65
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -4 -41 / +13 +106 -7 -80 / 6 26
* notice: removed / changed dates: [] / [2022-08-30]

2022-09-13T08:27:34Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043503025
* notice: last 14d: unq all: 16 105
* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 33 116
* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 33 106
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -11 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-30 2022-09-13]

2022-09-13T02:20:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041911668
* notice: last 14d: unq all: 17 115
* notice: prev accum: outdated-unq outdated-all / unq all: 0 0 / 35 143
* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 33 116
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -28 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-08-29] / [2022-08-30 2022-09-12]

2022-09-12T08:28:12Z: