@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-09-14T02:21:22Z",
+  "timestamp" : "2022-09-14T08:27:44Z",
   "count_outdated" : 107,
   "uniques_outdated" : 14,
   "count" : 135,
@@ -7,10 +7,10 @@
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 14 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 8 ]
+      "count": 2,
+      "count_minmax": [ 2, 14 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 8 ]
     },
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
