@@ -1,11 +1,11 @@
 {
   "count": 28,
-  "uniques": 8,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
