@@ -1,3 +1,11 @@
+2022-09-14T08:27:44Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051275475
+* notice: last 14d: unq all: 7 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
+* notice: next accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-31 2022-09-14]
+
 2022-09-14T02:21:22Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049710881
 * notice: last 14d: unq all: 8 28
